@@ -1,3 +1,8 @@
+2006-12-08  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* varobj.c (cplus_value_of_child): When accessing
+ 	base suboject, don't specially process references.
+ 	
 2006-12-06  Andrew Stubbs  <andrew.stubbs@st.com>
 
 	* event-top.c (command_handler): On EOF, print 'quit' and run quit
